--- a/MiniProject_2/React-Project/package.json
+++ b/MiniProject_2/React-Project/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "bootstrap": "^5.3.3",
+    "fg-loadcss": "^3.1.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
